[MIG] sale_mrp_bom: migrate to V18

--- a/sale_mrp_bom/views/sale_order.xml
+++ b/sale_mrp_bom/views/sale_order.xml
@@ -6,7 +6,7 @@
         <field name="inherit_id" ref="sale.view_order_form" />
         <field name="arch" type="xml">
             <xpath
-                expr="//field[@name='order_line']//tree//field[@name='name']"
+                expr="//field[@name='order_line']//list//field[@name='name']"
                 position="after"
             >
                 <field
